--- a/src/main/resources/static/styles/navbar.css
+++ b/src/main/resources/static/styles/navbar.css
@@ -5,16 +5,17 @@ background: linear-gradient(90deg, rgba(9,9,121,0.919502835313813) 16%, rgba(0,2
 	width: 100%;
 }
 ul {padding: 0;margin: 0 auto;width: 80%;}
-ul li {list-style: none;
-display: inline-block;
-padding:20px;
+ul li {
+	list-style: none;
+	display: inline-block;
+	padding:20px;
 }
 ul li:hover {
 	background: rgb(71,35,70);
 background: radial-gradient(circle, rgba(71,35,70,1) 0%, rgba(78,123,175,1) 100%);
 	}
 ul li a {
-	color: #fff;
+	color: #c0c0c0;
 text-decoration: none;
 }
 ul li p {color: #fff;text-decoration: none;}
@@ -40,3 +41,10 @@ background-repeat:no-repeat;
 background-size:cover;
 /* padding:10px; */
 }
+
+
+
+
+
+
+/* Drop down*/
