--- a/src/main/resources/static/styles/login.css
+++ b/src/main/resources/static/styles/login.css
@@ -31,6 +31,11 @@ body#LoginForm{
   font-size: 14px;
   text-decoration: underline;
 }
+.login-form .input[type=radio] {
+    border: 0px;
+    width: 100%;
+    height: 2em;
+}
 .login-form  .btn.btn-primary {
   background: #f0ad4e none repeat scroll 0 0;
   border-color: #f0ad4e;
@@ -41,6 +46,8 @@ body#LoginForm{
   line-height: 50px;
   padding: 0;
 }
+
+
 .forgot {
   text-align: left; margin-bottom:30px;
 }
